--- a/src/index.css
+++ b/src/index.css
@@ -7,8 +7,8 @@
 
 @layer base {
   :root {
-    --background: 255 255 255;
-    --foreground: 20 14.3% 4.1%;
+    --background: 253 32% 49.6%;
+    --foreground: 0 0% 100%;
     
     --card: 0 0% 100%;
     --card-foreground: 20 14.3% 4.1%;
